--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
                 width: 80%;
                 margin: auto;
             }
+            h1 {
+                color: yellow;
+                font-size: 48px;
+            }
+            p {
+                color: darkgray;
+                font-size: 12px;
+            }
+            span {
+                color: darkgrey;
+                font-size: 12px;
+            }
             .pirmas {
                 width: 100%;
                 float:left;
