--- a/index_grid.html
+++ b/index_grid.html
@@ -18,13 +18,8 @@
             font-size: 48px;
         }
 
-        p {
+        p, span {
             color: darkgray;
-            font-size: 12px;
-        }
-
-        span {
-            color: darkgrey;
             font-size: 12px;
         }
 
