FINAL teams assignments

--- a/index_grid.html
+++ b/index_grid.html
@@ -97,11 +97,11 @@
             width: 30%;
         }
 
-        /* @media screen and (max-width: 720px) { */
-        /* [class*="eilute"] { */
-        /* grid-column: auto; */
-        /* } */
-        /* } */
+        @media screen and (max-width: 720px) {
+        [class*="col-"] {
+        width: 100%;
+        }
+        }
 
     </style>
 </head>
